[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.6",
    "bip-utils>=2.9.3",
    "cryptography>=45.0.3",
    "matplotlib>=3.10.3",
    "mnemonic>=0.21",
    "openai>=1.82.1",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.1",
    "qrcode>=8.2",
    "requests>=2.32.3",
    "solana>=0.36.6",
    "solders>=0.26.0",
    "sqlalchemy>=2.0.41",
    "telegram>=0.0.1",
    "tronpy>=0.5.0",
    "web3>=7.12.0",
]
